tests/invalid/01_sin_end.mini0
// Falta 'end' en funcion

fun main()
    x: int